relatorios/202211176/T4/compilador.txt
main.cpp: In member function ‘std::string Planilha::calcula_celula(std::string)’:
main.cpp:214:30: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::__cxx11::basic_string<char>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  214 |             for(int i = 0; i < celulas[id].formula.size(); i++)
      |                            ~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:236:13: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
  236 |             if(calc.fim() == true)
      |             ^~
main.cpp:238:17: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  238 |                 return celulas[id].valor = std::to_string(calc.resultado());
      |                 ^~~~~~
main.cpp:240:13: error: ‘else’ without a previous ‘if’
  240 |             else
      |             ^~~~
main.cpp: In instantiation of ‘void Calculadora<T>::formula(std::string) [with T = int; std::string = std::__cxx11::basic_string<char>]’:
main.cpp:234:45:   required from here
main.cpp:115:26: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::__cxx11::basic_string<char>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  115 |         for(int i = 0; i < form.size(); i++)
      |                        ~~^~~~~~~~~~~~~
